# tree-sitter-snakemake

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json
bindings/rust/: README.md  lib.rs
examples/: python2-grammar-crlf.py  python2-grammar.py  python3-grammar-crlf.py  python3-grammar.py  python3.8_grammar.py
src/: grammar.json  parser.c  scanner.cc
test/corpus/: statements.txt
